fix: fix shift layout when clicking select input

--- a/e-commerce/src/app/globals.css
+++ b/e-commerce/src/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -135,4 +135,10 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/* Fix scroll lock issue */
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
 }
